LPD-66480 Allowing all present and future scopes for the MCPServer