@@ -19,7 +19,6 @@ import com.liferay.portal.kernel.model.User;
 import com.liferay.portal.kernel.service.ServiceContext;
 import com.liferay.portal.kernel.service.UserLocalService;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -59,14 +58,8 @@ public class MCPServerPortalInstanceLifecycleListener
 			ClientProfile.WEB_APPLICATION.id(),
 			OAuth2SecureRandomGenerator.generateClientSecret(), null, null,
 			null, 0, null, "MCP Server", null,
-			List.of("http://127.0.0.1:33418/"), false,
-			Arrays.asList(
-				"Liferay.Headless.Delivery.everything",
-				"Liferay.Headless.Discovery.API.everything.read",
-				"Liferay.Headless.Discovery.OpenAPI.everything.read",
-				"Liferay.Object.Admin.REST.everything",
-				"c_formula1team.everything"),
-			false, new ServiceContext());
+			List.of("http://127.0.0.1:33418/"), false, null, false,
+			new ServiceContext());
 	}
 
 	@Activate
